--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 4598
+
+
+spring:
+  data:
+    mongodb:
+      host: 192.168.1.102:27018
+      database: test
+      username: test
+      password: 123456
