--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,7 @@ spring:
       max-lifetime: 1800000
   data:
     mongodb:
-      host: 192.168.1.102:27018
-      database: test
-      username: test
-      password: 123456
+      uri: mongodb://test:123456@192.168.1.102:27018/test
   #Springboot2.6以后将SpringMVC 默认路径匹配策略从AntPathMatcher 更改为PathPatternParser，导致出错
   mvc:
     pathmatch:
