--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <!--腾讯云OSS-->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.79</version>
+        </dependency>
+
+
     </dependencies>
     <repositories>
         <repository>
