修改礼品相关控制层名称；注释token验证；补充部分dto字段说明；修改配置文件，开启mongoDB索引创建；初步完成礼品类型创建接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
   data:
     mongodb:
       uri: mongodb://test:123456@192.168.1.102:27018/test
+      #开启索引创建
+      auto-index-creation: true
   #Springboot2.6以后将SpringMVC 默认路径匹配策略从AntPathMatcher 更改为PathPatternParser，导致出错
   mvc:
     pathmatch:
