--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,12 @@
             <artifactId>cos_api</artifactId>
             <version>5.6.79</version>
         </dependency>
-
+        <!--二维码-->
+        <dependency>
+            <groupId>org.iherus</groupId>
+            <artifactId>qrext4j</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
     </dependencies>
     <repositories>
