--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,13 @@
             <artifactId>qrext4j</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.tencentcloudapi/tencentcloud-sdk-java -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos-sts_api</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
 
     </dependencies>
     <repositories>
