--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  ## 上传文件大小限制
+  servlet:
+    multipart:
+      max-file-size: 512MB
+      max-request-size: 512MB
 
 ## swagger 文档配置
 knife4j:
