--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <version>5.5.8</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
