调整账户体系的数据库设计

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,7 +80,7 @@ applet:
   clock-in:
     app-id: xxxxx
     secret: yyyyy
-  operator:
+  write-off:
     app-id: aaaaa
     secret: bbbbb
   address: https://api.weixin.qq.com
