--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <version>3.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.mouzt</groupId>
+            <artifactId>bizlog-sdk</artifactId>
+            <version>2.0.3</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
